# farcaster-social-graph

./: .dockerignore  .gitignore  Dockerfile  README.md
farcaster-social-graph-api/: .envrc.example  pyproject.toml
farcaster-social-graph-api/farcaster_social_graph_api/: config.py  jobs.py  logger.py  main.py  test.py
farcaster-social-graph-api/farcaster_social_graph_api/persisted_data/: bot_or_not_without_info.parquet  labels.parquet
farcaster-social-graph-api/farcaster_social_graph_api/services/: farcaster_data_collection.py  farcaster_data_transformation.py  farcaster_sybil_detection.py  sybil_detection.py
farcaster-social-graph-api/prisma/: schema.prisma
farcaster-sybil-detection/: README.md  pyproject.toml
farcaster-sybil-detection/farcaster_sybil_detection/config/: defaults.py
farcaster-sybil-detection/farcaster_sybil_detection/data/: dataset_loader.py
farcaster-sybil-detection/farcaster_sybil_detection/evaluation/: metrics.py  reporting.py  sampling.py  segmentation.py
farcaster-sybil-detection/farcaster_sybil_detection/features/: config.py  interface.py  manager.py  registry.py
farcaster-sybil-detection/farcaster_sybil_detection/models/: base.py  config.py  ensemble.py  factory.py
farcaster-sybil-detection/farcaster_sybil_detection/services/: base.py  detector.py  predictor.py  (+1 more)
notebooks/: .envrc.example  01-merge-data.ipynb  02-extract-bot-or-not-checks.ipynb  03-describe-bots-and-non-bots.ipynb  04-minimum-graph.ipynb  05-llm-inference.ipynb  06-test-create-result-for-large-links-df.ipynb  07-analyze-result-for-entire-network.ipynb  07-remove-bot-or-not-noises.ipynb  07-separate-sybils-in-groups.ipynb  08-remove-bot-or-not-noises.ipynb  09-remove-bot-or-not-noises.ipynb  10-evaluate-bot-or-not-quality.ipynb  11-test-verifications-to-get-human-labels.ipynb  12-manual-human-labeling.ipynb  13-inspect-sybilscar-result.ipynb  14-add-new-features.ipynb  14-join-labels.ipynb  15-consolidate-features-lazy.ipynb  15-inspect-sybilscar-result.ipynb  16-add-new-features.ipynb  16-explore-other-neynar-datasets.ipynb  17-apply-self-training.ipynb  17-framework-usage.ipynb  18-consolidate-features-lazy.ipynb  20-framework-usage.ipynb  21-test-better-cache.ipynb  22-get-auc-of-ensembled-test.ipynb  23-inspect-model-outputs.ipynb  package-lock.json  pyproject.toml
notebooks/algorithms/: find_best_params.py  metrics.py  refactored_sybil_scar.py  sybil_belief.py  sybil_rank.py  sybil_scar.py
notebooks/checkpoints/: activity_patterns_features.parquet  authenticity_features.parquet  cast_features.parquet  channel_features.parquet  cluster_analysis_features.parquet  derived_features.parquet  engagement_features.parquet  influence_features.parquet  mentions_features.parquet  network_features.parquet  network_quality_features.parquet  power_user_interaction_features.parquet  reaction_features.parquet  reply_patterns_features.parquet  storage_features.parquet  temporal_features.parquet  update_behavior_features.parquet  user_data_features.parquet  verification_features.parquet  verification_patterns_features.parquet
notebooks/models/: bot_detection_model.joblib
(+43 files in other folders)
