[tool.poetry]
name = "farcaster_sybil_detection"
version = "0.1.0"
description = ""
authors = ["devjoaov <joaovictorass95@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
aiofiles = "^24.1.0"
aioboto3 = "^13.1.1"
polars = "1.16.0"
numpy = "2.0.2"
honeybadger = "^0.20.2"
apscheduler = "^3.10.4"
matplotlib = "^3.9.2"
networkx = "^3.4.2"
scikit-learn = "^1.5.2"
eth-account = "^0.13.4"
web3 = "^7.5.0"
eth-tester = "^0.12.0b2"
py-evm = "^0.10.1b2"
nltk = "^3.9.1"
scipy = "^1.14.1"
gql = { extras = ["requests"], version = "^3.5.0" }
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
numba = "^0.60.0"
llvmlite = "^0.43.0"
shap = "^0.46.0"
optuna = "^4.1.0"
seaborn = "^0.13.2"
pyarrow = "^18.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
